--- a/ui/src/components/common/DatePicker.css
+++ b/ui/src/components/common/DatePicker.css
@@ -1,3 +1,3 @@
 .datePicker {
-  border: 2px solid var(--ion-color-base);
+  border: 2px solid var(--ion-color-light);
 }
