--- a/ui/src/components/common/TimePicker.css
+++ b/ui/src/components/common/TimePicker.css
@@ -1,3 +1,3 @@
 .timePicker {
-  border: 2px solid var(--ion-color-base);
+  border: 2px solid var(--ion-color-light);
 }
