--- a/ui/src/components/management/RouteGrid.css
+++ b/ui/src/components/management/RouteGrid.css
@@ -1,10 +1,10 @@
 .routeGrid {
-  border: 2px solid var(--ion-color-base);
+  border: 2px solid var(--ion-color-light);
   --ion-grid-columns: 24;
 }
 
 .routeGrid > ion-row {
-  border-top: 2px solid var(--ion-color-base);
+  border-top: 2px solid var(--ion-color-light);
 }
 
 .routeSubGrid {
